<resources>
    <string name="app_name">TeamUp</string>
    <string name="createGameButton">Crear Partida</string>
    <string name="createTeamsButton">Crear partida/equipos</string>
    <string name="createTournament">Crear Torneo</string>
    <string name="account">Cuenta</string>
    <string name="settings">Ajustes</string>
    <string name="total_members_label">Numero de participantes totales: </string>
    <string name="team_number_label">Número de equipos: </string>
    <string name="generate_custom_teams_button">Equipos personalizados </string>
    <string name="generate_random_teams_button">Equipos aleatorios </string>
    <string name="introduce_members_label">Introduzca todos los miembros para formar los equipos </string>
    <string name="introduce_custom_teams_label">Introduzca los participantes y equipos correspondientes </string>
    <string name="generate">Generar equipos </string>
    <string name="regenerate">Volver a generar </string>
    <string name="generated_teams_label">Equipos generados: </string>
    <string name="continue_text">Continuar</string>
    <string name="continue_to_teams_text">Continuar a crear equipos</string>
    <string name="regenerate_teams">Generar equipos de nuevo</string>
    <string name="gameNameText">Nombre de la partida:</string>
    <string name="game_search_title">Titulo</string>
    <string name="saveText">Guardar partida</string>
    <string name="example_team_label">Ejemplo: 4</string>
    <string name="example_members_label">Ejemplo: 12</string>
    <string name="positions">Posiciones</string>
    <string name="team_label">Equipo</string>
    <string name="member_label">Participante</string>
    <string name="discard_game">Descartar partida</string>
    <string name="first_name_hint">Nombre</string>
    <string name="last_name_hint">Apellidos</string>
    <string name="username_hint">Usuario</string>
    <string name="password_hint">Contraseña</string>
    <string name="password2_hint">Confirmar contraseña</string>
    <string name="sign_up_button">Regístrate!</string>
    <string name="welcome">Bienvenido a TeamUp</string>
    <string name="welcome2">Empieza ya!</string>
    <string name="login_button">Login</string>
    <string name="welcome_back">Bienvenido de nuevo!</string>
    <string name="already_txt">¿No tienes un usuario? Regístrate!</string>
    <string name="register_title">Registro</string>
    <string name="tournament_team">Por equipos</string>
    <string name="tournament_individual">Individual</string>
    <string name="search_videogames">Buscar</string>
    <string name="search_videogames_title">Seleccionar videojuego</string>
    <string name="played_games">Partidas jugadas</string>
    <string name="winner_text">Ganador</string>
    <string name="members_text">Participantes</string>
    <string name="date_text">Fecha</string>
    <string name="game_type_text">Juego</string>
    <string name="filter">Filtrar</string>
    <string name="gameName">Nombre partida</string>
    <string name="podium">Podio</string>
    <string name="hour">Hora</string>
    <string name="position_gamedetails">º Posición</string>
    <string-array name="languages">
        <item>Español(España)</item>
        <item>Inglés(UK)</item>
    </string-array>
    <string name="languagetxt">Idioma</string>
    <string name="change_button">Cambiar</string>
    <string name="user_not_logged_in_settings">No logueado</string>
    <string name="missing_information">Información faltante</string>
    <string name="missing_information_complete">Por favor rellene la información necesaria</string>
    <string name="no_conexion">No hay conexión</string>
    <string name="no_results">No hay resultados</string>
    <string name="generic_error_login">Error en el usuario o contraseña introducidas</string>
    <string name="empty_inputs">El usuario o la contraseña están vacias</string>
    <string name="different_passwords">Contraseñas no iguales</string>
    <string name="logout">Cerrar sesión</string>
</resources>