<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#F4F4F4"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="25dp">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/name" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/user_not_logged_in_settings"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/language_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/languagetxt"
                    android:textSize="25sp" />

                <Spinner
                    android:id="@+id/language_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15sp"
                    android:spinnerMode="dropdown" />

                <Button
                    android:id="@+id/change_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="88dp"
                    android:gravity="center"
                    android:text="@string/change_button" />

                <View
                    android:id="@+id/view11"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="96dp"
                    android:background="@color/black"
                    android:backgroundTint="@color/black" />

                <Button
                    android:id="@+id/log_out"
                    android:layout_width="184dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="88dp"
                    android:backgroundTint="@color/red"
                    android:gravity="center"
                    android:text="@string/logout" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>