<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.RandomTeamInputActivity">

        <TextView
            android:id="@+id/custom_input_teams_label"
            android:layout_width="354dp"
            android:layout_height="33dp"
            android:layout_marginTop="16dp"
            android:text="@string/generated_teams_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.29"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/custom_teams_input_layout"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.262"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/custom_input_teams_label"></LinearLayout>

        <Button
            android:id="@+id/regenerate_random_teams_button"
            android:layout_width="193dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FF5252"
            android:text="@string/regenerate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.057"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/custom_teams_input_layout" />

        <Button
            android:id="@+id/finish_random_teams"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#EA8E07"
            android:text="@string/continue_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.448"
            app:layout_constraintStart_toEndOf="@+id/regenerate_random_teams_button"
            app:layout_constraintTop_toBottomOf="@+id/custom_teams_input_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>